fixed the carousel spacing and styled drop down + carousel

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@
 .image-width {
     width: 100%;
 }
-/* .row {
-
-} */
+/* adds depth to the carousel */
+.back-shadow {
+    box-shadow: 0 20px 15px 0 rgb(0 0 0 / 30%), 0 2px 10px 0 rgb(0 0 0 / 15%);
+}
